demo/manifests/7-mirrored-routing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-weighted-routing
  namespace: nginx-demo
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["nginx-mirror.apps.example.com"]
  rules:
    - backendRefs:
        - name: nginx-hello-service
          port: 80
      filters:
        - type: RequestMirror
          requestMirror:
            backendRef:
              name: nginx-bye-service
              port: 80
